Edit controller and add model folder for configures of board and task
