# src/controller/board_controller.py
@@ -1,7 +1,7 @@
-from dataclasses import dataclass
 import pymongo
 import json
 from bson import ObjectId
+from src.model.board_config import BoardConfig
 
 my_client = pymongo.MongoClient('mongodb://localhost:27017/')
 my_database = my_client["F2"]
@@ -20,27 +20,6 @@ json_board = json.dumps(Board, default=custom_json_encoder)
 parsed_board_data = json.loads(json_board)
 
 
-@dataclass
-class Style:
-    background_color: str
-    border_radius: str
-    width: str
-
-
-@dataclass
-class ListConfig:
-    id: str
-    name: str
-    style: Style
-
-
-@dataclass
-class BoardConfig:
-    board_name: str
-    board_id: str
-    list_config: list[ListConfig]
-
-
 BOARD = {
     "boards": [
         BoardConfig(parsed_board_data["boardName"], parsed_board_data["_id"], parsed_board_data["listConfig"])
@@ -48,6 +27,6 @@ BOARD = {
 }
 
 
-def read_board():
+def find_board():
     boards = BOARD.get("boards")
     return boards
